--- a/spotify/index.html
+++ b/spotify/index.html
@@ -97,6 +97,18 @@
       <div class="col-lg-12" style="text-align: center;">
         <span id="timer">15</span> votes to win!
       </div>
+      <div class="row">
+        <div class="col-lg-12" style="text-align: center;">
+          <div class="card">
+            <div class="card-header">
+              Winners!
+            </div>
+            <div class="card-body" id="winners">
+              <span id="winners"></span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="row">
       <div class="col-lg-12" style="text-align: center;">
