--- a/index.html
+++ b/index.html
@@ -24,38 +24,55 @@
     <!-- <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 text-center">
-                <iframe id="player1" type="text/html" width="640" height="390"
-                    src="http://www.youtube.com/embed/"
-                    frameborder="0"></iframe>
-                <br>
-                <button id="video1vote" type="submit">Vote</button>
-                <br>
-                video 1 Votes: <span id="video1votes">0</span>
-            </div>
-            <div class="col-lg-6 text-center">
-                <iframe id="player2" type="text/html" width="640" height="390"
-                    src="http://www.youtube.com/embed/"
-                    frameborder="0"></iframe>
-                <br>
-                <button id="video2vote" type="submit">Vote</button>
-                <br>
-                video 2 Votes: <span id="video2votes">0</span>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-lg-12" style="text-align: center;">
-                <span id="timer">15</span> votes to win!
-            </div>
-        </div>
+            <div class="col-md-6">
+                <div id="search1">
+                    <label for="inputVideo1">Type a keyword</label>
+                    <input type="keyword" class="form-control" id="v1Input">
 
-        <div class="row">
-            <div class="col-lg-12" style="text-align: center;">
-                <h1>Winners!</h1>
-                <span id="winners"></span>
+                    <button type="submit1" class="btn btn-primary">Submit</button>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <iframe id="player1" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/"
+                        frameborder="0"></iframe>
+                    <br>
+                    <button id="video1VoteSubmit" type="submit">Vote</button>
+                    <br>
+                    video 1 Votes: <span id="video1votes">0</span>
+                </div>
+                <br />
+            </div>
+            <div class="col-md-6">
+
+                <label for="inputVideo2">Type a keyword</label>
+                <input type="keyword" class="form-control" id="v2Input">
+
+                <button type="submit2" class="btn btn-primary">Submit</button>
+
+
+                <div class="col-lg-6 text-center">
+                    <iframe id="player2" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/"
+                        frameborder="0"></iframe>
+                    <br>
+                    <button id="video2VoteSubmit" type="submit">Vote</button>
+                    <br>
+                    video 2 Votes: <span id="video2votes">0</span>
+                </div>
             </div>
         </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-lg-12" style="text-align: center;">
+            <span id="timer">15</span> votes to win!
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12" style="text-align: center;">
+            <h1>Winners!</h1>
+            <span id="winners"></span>
+        </div>
+    </div>
     </div>
     <!-- scripts -->
 
