--- a/spotify/index.html
+++ b/spotify/index.html
@@ -99,7 +99,7 @@
     </div>
       <div class="row">
         <div class="col-lg-12">
-          <div class="card" id="winnerFormat">
+          <div class="card">
             <div class="card-header">
               Latest Winner!
             </div>
